[tool.poetry]
name = "Comprehensive LLM powered App"
version = "0.1.0"
description = "LLM app comprising RAG, Autonomous Routing Agents and Agents Orchestration"
authors = ["Emerald Henry"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
ipython = "^8.22.2"
crewai = "^0.19.0"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
langchain = "^0.1.8"
llama-index = "^0.10.17"
pylint = "^3.0.3"
black = "^24.2.0"
pytest = "^7.4.0"
langchain_openai = "^0.0.5"
llama-index-llms-ollama = "^0.1.2"
wikipedia = "^1.4.0"
pypdf = "^4.1.0"
docarray = "^0.40.0"
dedent = "^0.5"
llama-index-embeddings-mistralai = "^0.1.4"
openai = "^1.14.0"
chainlit = "^1.0.401"
unstructured = "^0.11.0"
streamlit = "^1.32.2"
reportlab = "^4.1.0"
flask = "^3.0.2"
gunicorn = "^21.2.0"


[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"